@@ -1,0 +1,44 @@
+#                                                                -*-Automake-*-
+# Copyright (C) 2009 by Thomas Moulard, AIST, CNRS, INRIA.
+# This file is part of the roboptim.
+#
+# roboptim is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# Additional permission under section 7 of the GNU General Public
+# License, version 3 ("GPLv3"):
+#
+# If you convey this file as part of a work that contains a
+# configuration script generated by Autoconf, you may do so under
+# terms of your choice.
+#
+# roboptim is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with roboptim.  If not, see <http://www.gnu.org/licenses/>.
+
+# ------ #
+# README #
+# ------ #
+#
+# This mk file contains a rule for generating tarballs cryptographic signature.
+#
+# To use this file, you must include first ``init.mk'' in your
+# local ``Makefile.am''.
+
+
+.PHONY: announce
+
+SIGN=gpg --batch -b "$<"
+VERIFY=gpg --batch --verify "$@"
+
+$(distdir).tar.gz.sig: $(distdir).tar.gz
+	$(SIGN) && $(VERIFY)
+
+$(distdir).tar.bz2.sig: $(distdir).tar.bz2
+	$(SIGN) && $(VERIFY)
