@@ -1,0 +1,45 @@
+#                                                                -*-Automake-*-
+# Copyright (C) 2009 by Thomas Moulard, AIST, CNRS, INRIA.
+# This file is part of the roboptim.
+#
+# roboptim is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# Additional permission under section 7 of the GNU General Public
+# License, version 3 ("GPLv3"):
+#
+# If you convey this file as part of a work that contains a
+# configuration script generated by Autoconf, you may do so under
+# terms of your choice.
+#
+# roboptim is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with roboptim.  If not, see <http://www.gnu.org/licenses/>.
+
+# ------ #
+# README #
+# ------ #
+#
+# SourceForge documentation related Makefile rules.
+
+# Print version number if package is stable or an empty
+# string otherwise.
+SF_VERSION=`echo '@PACKAGE_VERSION@'			\
+	| $(GREP) '^[:digit:]+\.[:digit:]+(\.[:digit:]+)$$'`
+
+# Generate shell script that allows documentation upload.
+sf-upload.sh: $(top_srcdir)/build-aux/sf-upload.sh.in
+	$(top_builddir)/config.status 			\
+	--file="$@":"$<" && chmod a+x "$@"
+
+.PHONY: sf-doc-upload
+
+# Upload documentation to SourceForge.
+sf-doc-upload: sf-upload.sh doc
+	./sf-upload.sh VERSION=$(SF_VERSION)
